--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,13 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 idna==3.4
 lxml==4.9.1
+mypy==0.981
+mypy-extensions==0.4.3
+pydantic==1.10.2
 requests==2.28.1
 soupsieve==2.3.2.post1
+tomli==2.0.1
+types-requests==2.28.11
+types-urllib3==1.26.25
+typing_extensions==4.3.0
 urllib3==1.26.12
